Cleaning sonar.